--- a/index.html
+++ b/index.html
@@ -7,76 +7,77 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <a href="">
-            <img src="./assets/images/logo.svg" alt="logo">
+    <header class="header">
+        <a href="" class="logo">
+            <img class="logo-img" src="./assets/images/logo.svg" alt="logo">
         </a>
-        <ul>
-            <li>
-                <a href="">Main</a>
+        <ul class="menu">
+            <li class="menu-item">
+                <a href="" class="menu-link">Main</a>
             </li>
-            <li>
-                <a href="">Rates</a>
+            <li class="menu-item">
+                <a href="" class="menu-link">Rates</a>
             </li>
-            <li>
-                <a href="">Create Account</a>
+            <li class="menu-item">
+                <a href="" class="menu-link">Create Account</a>
             </li>
         </ul>
     </header>
-    <section>
-        <h1>Markup achivement</h1>
-        <p>The harder you work for something, the greater you’ll feel when you achieve it.</p>
-        <button>Learn more</button>
-        <img src="./assets/images/image.png" alt="img">
+    <section class="main">
+        <h1 class="main-title">Markup achivement</h1>
+        <p class="text">The harder you work for something, the greater you’ll feel when you achieve it.</p>
+        <button class="button">Learn more</button>
+        <img class="main-img" src="./assets/images/image.png" alt="img">
     </section>
-    <section>
-        <h2>Rates</h2>
-        <p>Failure will never overtake me if my determination to succeed is strong enough.</p>
-        <table>
+    <section class="rates-section">
+        <h2 class="title">Rates</h2>
+        <p class="text">Failure will never overtake me if my determination to succeed is strong enough.</p>
+        <table class="table">
             <tr>
-                <th>Features</th>
-                <th>Standart</th>
-                <th>Plus</th>
-                <th>PRO</th>
+                <th class="table-subtitle gray">Features</th>
+                <th class="table-title">Standart</th>
+                <th class="table-title">Plus</th>
+                <th class="table-title">PRO</th>
             </tr>
             <tr>
-                <th>Theory</th>
+                <th class="table-subtitle">Theory</th>
                 <td><img src="./assets/images/check.svg" alt="check"></td>
                 <td><img src="./assets/images/check.svg" alt="check"></td>
                 <td><img src="./assets/images/check.svg" alt="check"></td>
             </tr>
             <tr>
-                <th>Practice</th>
+                <th class="table-subtitle">Practice</th>
                 <td><img src="./assets/images/close.svg" alt="close"></td>
                 <td><img src="./assets/images/check.svg" alt="check"></td>
                 <td><img src="./assets/images/check.svg" alt="check"></td>
             </tr>
-            <tr>
-                <th>Code review</th>
+            <tr class="table-footer">
+                <th class="table-subtitle">Code review</th>
                 <td><img src="./assets/images/close.svg" alt="close"></td>
                 <td><img src="./assets/images/close.svg" alt="close"></td>
                 <td><img src="./assets/images/check.svg" alt="check"></td>
             </tr>
             <tr>
-                <th><a href="">Have questions?</a></th>
-                <td><button>get now</button></td>
-                <td><button>get now</button></td>
-                <td><button>get now</button></td>
+                <th class="table-subtitle"><a href="" class="table-link">Have questions?</a></th>
+                <td><button class="table-button">get now</button></td>
+                <td><button class="table-button active">get now</button></td>
+                <td><button class="table-button">get now</button></td>
             </tr>
         </table>
     </section>
-    <section>
-        <h2>Create your free account</h2>
-        <p>
+    <section class="create-account-section">
+        <h2 class="title">Create your free account</h2>
+        <p class="text">
             Let us first talk about dreams. We all know that dreams do play a role in our daily lives. The majority of people pay little attention to dreams. Dreams can help us find solutions to our daily problems and see things from a different perspective. Whenever we are dreaming, we can be who or what we want to be, regardless of the fact that in real life.
         </p>
-        <ul>
-            <li>Easy setup, fast start</li>
-            <li>Free forever for core features</li>
-            <li>14-day trial of premium features</li>
+        <ul class="list">
+            <li class="list-item">Easy setup, fast start</li>
+            <li class="list-item">Free forever for core features</li>
+            <li class="list-item">14-day trial of premium features</li>
         </ul>
         <form>
             <input type="text" placeholder="Full Name*">
@@ -89,14 +90,16 @@
                 <option value>China</option>
                 <option value>USA</option>
             </select>
-            <label for="front">
-                <input id="front" type="radio" name="stack" checked>
-                Frontend
-            </label>
-            <label for="back">
-                <input id="back" type="radio" name="stack">
-                Backend
-            </label>
+            <div>
+                <label for="front">
+                    <input id="front" type="radio" name="stack" checked>
+                    Frontend
+                </label>
+                <label for="back">
+                    <input id="back" type="radio" name="stack">
+                    Backend
+                </label>
+            </div>
             <fieldset>
                 <legend>Favorite Technologies</legend>
                 <label for="html">
