--- a/index.html
+++ b/index.html
@@ -91,39 +91,27 @@
                 <option value>USA</option>
             </select>
             <div>
-                <label for="front">
-                    <input id="front" type="radio" name="stack" checked>
-                    Frontend
-                </label>
-                <label for="back">
-                    <input id="back" type="radio" name="stack">
-                    Backend
-                </label>
+                <input id="front" type="radio" name="stack" checked class="custom-radio">
+                <label for="front">Frontend</label>
+                <input id="back" type="radio" name="stack" class="custom-radio">
+                <label for="back">Backend</label>
             </div>
             <fieldset>
                 <legend>Favorite Technologies</legend>
-                <label for="html">
-                    <input id="html" type="checkbox" name="html" checked>
-                    Frontend
-                </label>
-                <label for="css">
-                    <input id="css" type="checkbox" name="css" checked>
-                    Backend
-                </label>
-                <label for="react">
-                    <input id="react" type="checkbox" name="react">
-                    Frontend
-                </label>
-                <label for="sc">
-                    <input id="sc" type="checkbox" name="sc">
-                    Backend
-                </label>
+                <input id="html" type="checkbox" name="html" checked class="custom-checkbox">
+                <label for="html">HTML</label>
+                <input id="css" type="checkbox" name="css" checked class="custom-checkbox">
+                <label for="css">CSS</label>
+                <input id="react" type="checkbox" name="react" class="custom-checkbox">
+                <label for="react">React</label>
+                <input id="sc" type="checkbox" name="sc" class="custom-checkbox">
+                <label for="sc">Styled components</label>
             </fieldset>
             <textarea></textarea>
             <input type="submit">
         </form>
     </section>
-    <footer>
+    <footer class="footer">
         <small>Copyright © 2023. All rights reserved.</small>
         <!-- <span>Copyright © 2023. All rights reserved.</span> -->
     </footer>
